// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-layout Components Drawer Renders Drawer 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 100%;
  height: 10px;
  -webkit-transition-property: width,height;
  transition-property: width,height;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  background-color: #surface;
  overflow: hidden hidden;
}

<div
  className="c0"
  direction="vertical"
  open={true}
  size={10}
/>
`;

exports[`ui-elements-layout Components Drawer Renders Drawer with children 1`] = `
.c0 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 100%;
  height: 10px;
  -webkit-transition-property: width,height;
  transition-property: width,height;
  -webkit-transition-duration: .2s;
  transition-duration: .2s;
  -webkit-transition-timing-function: ease-out;
  transition-timing-function: ease-out;
  background-color: #surface;
  overflow: hidden hidden;
}

<div
  className="c0"
  direction="vertical"
  open={true}
  size={10}
>
  Content
</div>
`;
